# dogmud-spacetimedb

./: .gitignore  Cargo.toml  TDD.md
.cargo/: config.toml
clients/ratatui-tui/: Cargo.toml
clients/ratatui-tui/src/: connection.rs  main.rs  state.rs  ui.rs
clients/ratatui-tui/src/module_bindings/: account_table.rs  account_type.rs  action_type_type.rs  ai_type_type.rs  armor_type_type.rs  attack_reducer.rs  bank_account_table.rs  bank_account_type.rs  biome_type_type.rs  client_type_type.rs  climate_type_type.rs  condition_table.rs  condition_type.rs  condition_type_type.rs  containment_table.rs  containment_type.rs  create_account_reducer.rs  create_character_reducer.rs  create_room_grid_reducer.rs  create_test_entity_reducer.rs  create_test_region_reducer.rs  create_test_room_reducer.rs  damage_type_type.rs  entity_table.rs  entity_type.rs  entity_type_type.rs  equip_slot_type.rs  event_type_type.rs  exit_table.rs  exit_type.rs  game_event_table.rs  game_event_type.rs  item_data_table.rs  item_data_type.rs  item_type_type.rs  login_reducer.rs  look_reducer.rs  mod.rs  move_player_reducer.rs  movement_type_type.rs  (+17 more)
common/: Cargo.toml
common/src/: combat.rs  lib.rs  messages.rs  stats.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/reducers/: auth.rs  combat.rs  mod.rs  movement.rs  test_reducer.rs  world.rs
server/src/tables/: account.rs  bank_account.rs  condition.rs  containment.rs  entity.rs  exit.rs  game_event.rs  item_data.rs  mod.rs  npc_behavior.rs  player_session.rs  rate_limit.rs  region.rs  room.rs  server_config.rs  skill.rs
server/src/utils/: combat_stats.rs  mod.rs
shepherds/: Cargo.toml
shepherds/src/: client.rs  lib.rs
