[package]
name = "dogmud-ratatui-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
spacetimedb-sdk = "0.11"
dogmud-common = { path = "../../common" }
