[package]
name = "dogmud-ratatui-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ratatui = "0.30.0"
crossterm = "0.29.0"
spacetimedb-sdk = { workspace = true }
dogmud-common = { path = "../../common" }
